--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: free_market_production
+  database: free-market
   username: root
-  password: <%= Rails.application.credentials[:database_password] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
