--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: free-market
+  database: freemarket_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
